versioned_docs/version-2.4.x/4_guides/2_metatype.mdx
---
sidebar_position: 2
---

# Meta Type

This section discuss how to create parent and children `MetaType`.

import { Image } from '@site/src/components/Image'

## Create Child MetaType 🦜

To create child Meta Type, pass the parent type into the 4th argument of the child.

```ts title='metaType.ts'
import { MetaTypeCreator, getFirelord, getFirestore } from 'firelordjs'

const db = getFirestore()

export type Parent = MetaTypeCreator<
	{
		a: number
	},
	'collectionIDLevel1', // collectionId type
	string, // docId type
	null // you can skip this, top collection don't need parent
>

export type Child = MetaTypeCreator<
	{
		a: 'a' | 'b' | 'c'
		b: { c: number }
	},
	'collectionIDLevel2', // collectionId type
	string, // docId type
	Parent // child's parent is Parent
>

export type GrandChild = MetaTypeCreator<
	{
		e: { f: boolean }[]
	},
	'collectionIDLevel3', // collectionId type
	string, // docId type
	Child // grandChild's parent is child
>
```

```ts title='firelordRef.ts'
import { Parent, Child, GrandChild } from './metaType.ts'

export const parentRef = getFirelord<Parent>(
	db,
	'collectionIDLevel1' // parent col ID
)

export const childRef = getFirelord<Child>(
	db,
	'collectionIDLevel1', // parent col ID
	'collectionIDLevel2' // child col ID
)

export const grandChildRef = getFirelord<GrandChild>(
	db,
	'collectionIDLevel1', // parent col ID
	'collectionIDLevel2', // child col ID
	'collectionIDLevel3' // grandChild col ID
)
```

```ts title='doc.ts'
import { parentRef, childRef, grandChildRef } from './firelordRef.ts'

// doc ref require all ANCESTORS and itself document ID
export const parentDocRef = parentRef.doc(
	'docIDLevel1' // parent doc ID
)
export const childDocRef = childRef.doc(
	'docIDLevel1', // parent doc ID
	'docIDLevel2' // child doc ID
)
export const grandChildDocRef = grandChildRef.doc(
	'docIDLevel1', // parent doc ID
	'docIDLevel2', // child doc ID
	'docIDLevel3' // grand child doc ID
)
```

```ts title='col.ts'
import { parentRef, childRef, grandChildRef } from './firelordRef.ts'

// collectionRef does not require its own document ID, start from oldest ancestor to parent
export const parentColRef = parentRef.collection()
export const childColRef = childRef.collection(
	'docIDLevel1' // parent doc ID
)
export const grandChildColRef = grandChildRef.collection(
	'docIDLevel1', // parent doc ID
	'docIDLevel2' // child doc ID
)
```

```ts title='colGroup.ts'
import { parentRef, childRef, grandChildRef } from './firelordRef.ts'

// collection group doesn't need any ID.
export const parentColGroupRef = parentRef.collectionGroup()
export const childColGroupRef = childRef.collectionGroup()
export const grandChildColGroupRef = grandChildRef.collectionGroup()
```

:::tip
You only need document IDs to create `docRef` and `collectionRef`.

You only need to write collection ID when you create `MetaType` and `FirelordRef`, you never need to write any collection ID afterward.

Please don't create files like `doc.ts`, `col.ts`, and `colGroup.ts`, they are for explanation only.
:::

## Type Checking

FirelordJS check for the type and number of your collection ID and document ID.

<Image
	src="/firelordv2/metaType2.png"
	text="Unknown collection ID trigger type error"
/>

<Image
	src="/firelordv2/metaType3.png"
	text="Missing collection ID trigger type error"
/>

## Index Accessor

Explore MetaType with index accessor, this is useful if you want to create abstraction.

<Image
	src="/firelordv2/metaType4.png"
	text="Explore MetaType with index accessor."
/>

| Indexes        | Descriptions                                                                 |
| -------------- | ---------------------------------------------------------------------------- |
| base           | the original type                                                            |
| read           | output type of query operation.                                              |
| compare        | input type of query operation.                                               |
| write          | input type of `set`, `create` and `add` operations.                          |
| writeFlatten   | input type of `update` operation.                                            |
| writeMerge     | input type of `set merge` operation.                                         |
| collectionID   | collection ID type                                                           |
| collectionPath | collection full path type                                                    |
| docID          | document ID type                                                             |
| docPath        | document full path type                                                      |
| parent         | Parent MetaType if exist, else Null                                          |
| ancestors      | all ancestors MetaType in array, starting from Parent to the oldest ancestor |
